[gd_scene load_steps=15 format=3 uid="uid://vx5dftdthdeq"]

[ext_resource type="Script" path="res://Scripts/Manager/gameManager.gd" id="1_xycqc"]
[ext_resource type="PackedScene" uid="uid://cfn018ekd2jwi" path="res://Scenes/Character/runner.tscn" id="2_aokg4"]
[ext_resource type="PackedScene" uid="uid://dh0gdx0pipca5" path="res://Scenes/Character/maker.tscn" id="3_dcceu"]
[ext_resource type="PackedScene" path="res://Scenes/pickup.tscn" id="4_483tt"]
[ext_resource type="Texture2D" uid="uid://co2peew7bu0ci" path="res://Sprites/Map/wall_floor_sprite_sheet.png" id="5_ler35"]
[ext_resource type="Script" path="res://Scripts/Game Scenes/mazeMap.gd" id="6_wdns3"]
[ext_resource type="Texture2D" uid="uid://bphuuceod4jb" path="res://Sprites/UI/builder_ui_spritesheet.png" id="7_cdn2w"]
[ext_resource type="Script" path="res://Scenes/GameUserInterface.gd" id="7_t2psg"]
[ext_resource type="Script" path="res://Scripts/UI/cooldown.gd" id="8_11ymk"]
[ext_resource type="Script" path="res://Scenes/GameScenes/PlayerUI.gd" id="8_ffmu4"]
[ext_resource type="Texture2D" uid="uid://bnutdn1bq76kv" path="res://Sprites/UI/circle.png" id="9_ibyeq"]
[ext_resource type="Texture2D" uid="uid://b6nyw7hufqmo4" path="res://Sprites/UI/progressbar.png" id="10_56g0u"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ch73p"]
texture = ExtResource("5_ler35")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_jf6u7"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_ch73p")

[node name="Game" type="Node2D"]
script = ExtResource("1_xycqc")
runner_scence = ExtResource("2_aokg4")
maker_scene = ExtResource("3_dcceu")
pickup_scene = ExtResource("4_483tt")

[node name="MazeMap" type="TileMap" parent="."]
texture_filter = 1
tile_set = SubResource("TileSet_jf6u7")
format = 2
layer_0/tile_data = PackedInt32Array(0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 65536, 131072, 0, 65537, 131072, 0, 65538, 131072, 0, 65539, 131072, 0, 65540, 131072, 0)
script = ExtResource("6_wdns3")

[node name="P2Timer" type="Timer" parent="."]
one_shot = true

[node name="GameUserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("7_t2psg")

[node name="P1UI" type="Control" parent="GameUserInterface"]
layout_mode = 3
anchors_preset = 0
offset_top = 336.0
offset_right = 168.0
offset_bottom = 400.0
script = ExtResource("8_ffmu4")

[node name="Background" type="ColorRect" parent="GameUserInterface/P1UI"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.971
anchor_bottom = 0.5
offset_right = 4.87199
offset_bottom = 32.0
color = Color(0.756863, 0.698039, 0.580392, 1)

[node name="Hotbar" type="TextureRect" parent="GameUserInterface/P1UI"]
texture_filter = 1
layout_mode = 0
offset_left = 5.0
offset_top = 1.0
offset_right = 165.0
offset_bottom = 41.0
texture = ExtResource("7_cdn2w")
stretch_mode = 2

[node name="TimerLabel" type="Label" parent="GameUserInterface/P1UI"]
texture_filter = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -26.0
offset_top = -26.0
offset_right = -7.0
grow_horizontal = 0
grow_vertical = 0
text = "60
"
horizontal_alignment = 1

[node name="P1Timer" type="Timer" parent="GameUserInterface/P1UI/TimerLabel"]
one_shot = true
autostart = true

[node name="Wall" type="Control" parent="GameUserInterface/P1UI"]
anchors_preset = 0
offset_left = 5.0
offset_top = 1.0
offset_right = 37.0
offset_bottom = 33.0

[node name="WallLabel" type="Label" parent="GameUserInterface/P1UI/Wall"]
texture_filter = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.0
offset_top = -19.0
offset_bottom = 7.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.552941, 0, 0, 1)
theme_override_font_sizes/font_size = 0
text = "0"

[node name="FakeWall" type="Control" parent="GameUserInterface/P1UI"]
layout_mode = 3
anchors_preset = 0
offset_left = 37.0
offset_top = 1.0
offset_right = 69.0
offset_bottom = 33.0

[node name="FakeWallLabel" type="Label" parent="GameUserInterface/P1UI/FakeWall"]
texture_filter = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.0
offset_top = -19.0
offset_bottom = 7.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.552941, 0, 0, 1)
theme_override_font_sizes/font_size = 0
text = "0"

[node name="Boulder" type="Control" parent="GameUserInterface/P1UI"]
layout_mode = 3
anchors_preset = 0
offset_left = 133.0
offset_top = 2.0
offset_right = 165.0
offset_bottom = 34.0

[node name="BoulderLabel" type="Label" parent="GameUserInterface/P1UI/Boulder"]
texture_filter = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.0
offset_top = -19.0
offset_bottom = 7.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.552941, 0, 0, 1)
theme_override_font_sizes/font_size = 0
text = "0"

[node name="OilCooldown" type="ColorRect" parent="GameUserInterface/P1UI"]
visible = false
layout_mode = 0
offset_left = 69.0
offset_top = 2.0
offset_right = 101.0
offset_bottom = 34.0
color = Color(0, 0, 0, 0.32549)
script = ExtResource("8_11ymk")

[node name="Progress" type="TextureProgressBar" parent="GameUserInterface/P1UI/OilCooldown"]
texture_filter = 1
layout_mode = 1
offset_right = 32.0
offset_bottom = 32.0
value = 40.0
fill_mode = 4
texture_progress = ExtResource("9_ibyeq")
tint_under = Color(0.113725, 0.113725, 0.113725, 1)

[node name="Timer" type="Timer" parent="GameUserInterface/P1UI/OilCooldown"]
one_shot = true

[node name="BombCooldown" type="ColorRect" parent="GameUserInterface/P1UI"]
visible = false
layout_mode = 0
offset_left = 101.0
offset_top = 2.0
offset_right = 133.0
offset_bottom = 34.0
color = Color(0, 0, 0, 0.32549)
script = ExtResource("8_11ymk")

[node name="Progress" type="TextureProgressBar" parent="GameUserInterface/P1UI/BombCooldown"]
texture_filter = 1
layout_mode = 1
offset_right = 32.0
offset_bottom = 32.0
value = 40.0
fill_mode = 4
texture_progress = ExtResource("9_ibyeq")
tint_under = Color(0.113725, 0.113725, 0.113725, 1)

[node name="Timer" type="Timer" parent="GameUserInterface/P1UI/BombCooldown"]
one_shot = true

[node name="TextureProgressBar" type="TextureProgressBar" parent="GameUserInterface/P1UI"]
texture_filter = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -79.0
offset_top = -22.0
offset_right = 49.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 0
max_value = 5.0
value = 3.0
texture_under = ExtResource("10_56g0u")
texture_progress = ExtResource("10_56g0u")
tint_progress = Color(0, 0.615686, 0, 1)

[connection signal="timeout" from="P2Timer" to="." method="_on_p_2_timer_timeout"]
[connection signal="timeout" from="GameUserInterface/P1UI/TimerLabel/P1Timer" to="." method="_on_p_1_timer_timeout"]
[connection signal="timeout" from="GameUserInterface/P1UI/OilCooldown/Timer" to="." method="_on_p1_oil_timer_timeout"]
[connection signal="timeout" from="GameUserInterface/P1UI/OilCooldown/Timer" to="GameUserInterface/P1UI/OilCooldown" method="_on_timer_timeout" flags=18]
[connection signal="timeout" from="GameUserInterface/P1UI/BombCooldown/Timer" to="." method="_on_p1_bomb_timer_timeout"]
[connection signal="timeout" from="GameUserInterface/P1UI/BombCooldown/Timer" to="GameUserInterface/P1UI/BombCooldown" method="_on_timer_timeout" flags=18]
[connection signal="value_changed" from="GameUserInterface/P1UI/TextureProgressBar" to="." method="_on_p1_texture_progress_bar_value_changed"]
